<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CONTENT">CONTENT</string>
    <string name="item_1">Азия</string>
    <string name="item_2">Южная Америка</string>
    <string name="item_3">Северная Америка</string>
    <string name="item_4">Африка</string>
    <string name="item_5">Европа</string>
    <string name="item_6">Антарктида</string>
    <string name="item_7">Австралия и Океания</string>
    <string name="item_8">Австралия</string>
    <string name="search">Search</string>
</resources>